# mozjpeg-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/radzivon/bartoshyk/mozjpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/radzivon/bartoshyk/mozjpeg/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/radzivon/bartoshyk/mozjpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mozjpeg/: build.gradle  consumer-rules.pro
mozjpeg/src/androidTest/java/com/github/awxkee/mozjpeg/: ExampleInstrumentedTest.kt
mozjpeg/src/main/cpp/: CMakeLists.txt  mozjpeg.cpp
mozjpeg/src/main/java/com/github/awxkee/mozjpeg/: EncodeJpegException.kt  GetPixelsException.kt  HardwareBitmapIsNotImplementedException.kt  Mozjpeg.kt  UnsupportedImageFormatException.kt
mozjpeg/src/test/java/com/github/awxkee/mozjpeg/: ExampleUnitTest.kt
